Update 'visb3ogte-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:c2a7e06036ade32008bf305bd161106217d3219f@sha256:e00d513514b4bb86709199f89d144ed76060e81b12e97cd757ee815059f166d6

--- a/components/visb3ogte-python/overlays/development/deployment-patch.yaml
+++ b/components/visb3ogte-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: visb3ogte-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:c2a7e06036ade32008bf305bd161106217d3219f@sha256:e00d513514b4bb86709199f89d144ed76060e81b12e97cd757ee815059f166d6
+          name: container-image
